* <span class="label label-info">Modified</span> @org.eclipse.sirius.tools.api.ui.color.EnvironmentSystemColorFactory@ has been moved to @org.eclipse.sirius.model@ plugin.

h4. Changes in @org.eclipse.sirius.diagram@

* <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.DiagramPlugin@ has been renamed to @org.eclipse.sirius.diagram.tools.api.DiagramPlugin@.
* <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.Messages@ has been renamed to @org.eclipse.sirius.diagram.tools.api.Messages@.
* <span class="label label-success">Added</span> Add method @eventShouldTriggerArrange(OperationHistoryEvent)@ in @org.eclipse.sirius.diagram.business.api.diagramtype.IDiagramDescriptionProvider@ This method is used to avoid an arrange to be launch for a specific event if it is not necessary for a specific diagram description.

h4. Changes in @org.eclipse.sirius.diagram.model@

* <span class="label label-danger">Removed</span> The @DiagramDescription::allTools@ operation has been removed from the Diagram metamodel. The corresponding method has been removed from generated code. Calls to @org.eclipse.sirius.diagram.description.DiagramDescription.getAllTools()@ should be replaced by @new org.eclipse.sirius.diagram.business.api.query.DiagramDescriptionQuery(diagramDescription).getAllTools()@.
* <span class="label label-danger">Removed</span> The @DiagramDescription::allEdgeMappings@ operation has been removed from the Diagram metamodel. The corresponding method has been removed from generated code. Calls to @org.eclipse.sirius.diagram.description.DiagramDescription.getAllEdgeMappings()@ should be replaced by @org.eclipse.sirius.diagram.business.internal.metamodel.helper.ContentHelper.getAllEdgeMappings(diagramDescription, false)@ alongside with the getAllNodeMappings and getAllContainerMappings methods.

h4. Changes in @org.eclipse.sirius.diagram.ui@
