@@ -277,6 +277,10 @@
 				<code>org.eclipse.sirius.tools.api.ui.color.EnvironmentSystemColorFactory</code> has been moved to 
 				<code>org.eclipse.sirius.model</code> plugin.
 			</li>
+			<li><span class="label label-info">Modified</span> Methods 
+				<code>org.eclipse.sirius.business.api.session.danalysis.DAnalysisSelector.selectSmartlyAnalysisForAddedResource(Resource, Collection&lt;DAnalysis&gt;)</code> and 
+				<code>org.eclipse.sirius.business.api.session.danalysis.DAnalysisSessionHelper.selectAnalysis(Resource, Collection&lt;DAnalysis&gt;, DAnalysisSelector)</code> have been deprecated for removal in a future version.
+			</li>
 		</ul>
 		<h4 id="Changesinorg.eclipse.sirius.diagram">Changes in 
 			<code>org.eclipse.sirius.diagram</code>
